--- a/conf.ini
+++ b/conf.ini
@@ -17,3 +17,8 @@ bucket=daosuan-product
 expires=60
 access_key=J1dWy_L0mX0ccnle1e4pZqDypXxzlScFhbmPYYKn
 secret_key=yf8vojhGd9pkkvY1CWUBfSHqFhIICW3EbaEXvRLx
+
+[Mail]
+smtp_host=smtp.163.com
+username=lshzuiliangnv@163.com
+password=TXOYEYFOGJZDYVZK
